# praca_kosiarka_

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
android-app/: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/kosiarka/data/: Api.kt
android-app/app/src/main/java/com/example/kosiarka/ui/: MainActivity.kt
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Decision.cpp  Decision.hpp  HumiditySensor.cpp  HumiditySensor.hpp  LightSensor.cpp  LightSensor.hpp  Logger.cpp  Logger.hpp  PressureSensor.cpp  PressureSensor.hpp  RainSensor.cpp  RainSensor.hpp  SensorInterface.hpp  Sensors.cpp  Sensors.hpp  SoilMoistureSensor.cpp  SoilMoistureSensor.hpp  TemperatureSensor.cpp  TemperatureSensor.hpp  UserExpectation.cpp  UserExpectation.hpp  bh1750.cpp  bh1750.hpp  bme280.cpp  bme280.hpp  bme280Interface.cpp  bme280Interface.hpp  main.cpp  mcp3008.cpp  mcp3008.hpp
test/: CMakeLists.txt  DecisionTest.cpp  LoggerTest.cpp  MockSensorProvider.hpp  SensorsTest.cpp  UserExpectationTest.cpp
test/doubles/: bh1750.hpp  mcp3008.hpp
